# mfc_nlp_itis

./: .gitignore  README.md  answer.txt  bot.py  botv2.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  test_gp.py  torch_conf.py
data/row_files/: ex_data.csv
src/: Dockerfile  constants.py  utils.py
srv/api/: Dockerfile  main.py  pre_output_in.txt  requirements.txt  setup.py  tmp.py
srv/api/classifier/: Dockerfile  requirements.txt
srv/api/nlu-retriever/: Dockerfile  custom_csv_loader.py  serv.py  token.py  utils.py
srv/frontend-m/: app.py
srv/tg-ui/tg-us/: app.py
train_bert/: download_bert.py  test_lab.py  train_bert .ipynb  train_bert.ipynb  train_bert.py
train_bert/data/: data.csv
train_bert/results/checkpoint-350/: config.json
train_labse/: labse_train .ipynb  labse_train.ipynb  requirements.txt
train_labse/data/: test_dataset.xlsx  train_dataset_Датасет.csv
